--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+a {
+  text-decoration: none;
+  cursor: pointer;
+}
+
 header {
   position: fixed;
   top: 0;
@@ -49,14 +54,14 @@ header .navigation li {
   margin-left: 0;
 }
 
-header .navigation.active li {
-  list-style-type: none;
-  padding-top: 20px;
-}
-
 header .navigation li a {
   color: #111;
   font-size: 1.6em;
+}
+
+header .navigation.active li {
+  list-style-type: none;
+  padding-top: 20px;
 }
 
 .menuToggle {
@@ -108,7 +113,7 @@ header .navigation li a {
 
 .text1 {
   color: #272a31;
-  font-size: bold;
+  font-size: 30px;
 }
 
 .text2 {
@@ -135,11 +140,6 @@ header .navigation li a {
 
 .footercard {
   background-color: #ec5242;
-
-  cursor: pointer;
-}
-a {
-  text-decoration: none;
   cursor: pointer;
 }
 
@@ -186,7 +186,6 @@ button {
 }
 
 @media (min-width: 768px) {
-
   .header-bg {
     height: 700px;
   }
@@ -227,10 +226,6 @@ button {
     color: #111;
   }
 
-  header .logo span {
-    color: #ec5242;
-  }
-
   header .navigation {
     position: relative;
     display: flex;
@@ -267,9 +262,6 @@ button {
     color: #ec5242;
   }
 
-  .desktopcoursetitle {
-    color: #ec5242;
-  }
   .desktopline {
     border: 3px solid #ec5242;
     width: 35px;
@@ -289,5 +281,4 @@ button {
   .grey {
     color: grey;
   }
-
 }
