--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ header .navigation.active li a {
 }
 
 .header-bg {
-  background-image: url(assets/images/bg1.jpg);
+  background-image: url(assets/images/bg.png);
   background-size: cover;
   background-color: rosybrown;
   position: relative;
@@ -120,12 +120,15 @@ header .navigation.active li a {
   color: #d3d3d3;
 }
 
-.coursescard {
-  background-color: #272a31;
+.desktopcoursescard {
+  background-color:#272a31;
+  width: 300px;
+  height: 300px;
+  margin-right: 5px;
 }
 
 .coursescards {
-  background-color: #d3d3d3;
+  background-color: gray;
 }
 
 .line {
@@ -183,6 +186,15 @@ button {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.maincard {
+  background-image: url(assets/images/images4.jpg);
+  background-size: cover;
+  background-color: ;
+  position: relative;
+  /* height: 600px; */
+  background-repeat: no-repeat;
 }
 
 @media (min-width: 768px) {
@@ -277,4 +289,5 @@ button {
   .grey {
     color: grey;
   }
+
 }
