--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ header .navigation.active li a {
   position: relative;
   width: 40px;
   height: 40px;
-  background: url(./assets/icons/icon.png);
+  background: url(./assets/icons/hambuger.png);
   background-size: 30px;
   background-repeat: no-repeat;
   background-position: center;
@@ -156,13 +156,13 @@ header .navigation.active li a {
   margin-left: 300px;
 }
 
-button {
+/* button {
   background-color: white;
   color: black;
   border: 2px solid grey;
   width: 50%;
   margin-left: 150px;
-}
+} */
 
 .aboutcardmain {
   width: 800px;
