--- a/style.css
+++ b/style.css
@@ -327,10 +327,12 @@ nav .navigation.active li a {
   }
 }
 
-@media (min-width: 768px) { 
-
+@media (min-width: 768px) {
   header .topnav {
     display: block;
+  }
+
+  header .topnav {
     position: fixed;
     top: 0;
     left: 0;
@@ -341,13 +343,14 @@ nav .navigation.active li a {
     align-items: center;
     transition: 0.5s;
   }
+
   header .header-links {
     margin-right: 30px;
   }
   
   header .about-header-links {
     margin-right: 80px;
-  }  
+  }
 
   .headercontent {
     margin-bottom: 100px;
